--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,6 @@
-astroid==2.3.1
-Django==2.2.6
-djangorestframework==3.10.3
-isort==4.3.21
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-pylint==2.4.2
-pytz==2019.3
-six==1.12.0
-sqlparse==0.3.0
-typed-ast==1.4.0
-wrapt==1.11.2
+asgiref==3.2.10
+Django==3.0.8
+django-cors-headers==3.4.0
+djangorestframework==3.11.0
+pytz==2020.1
+sqlparse==0.3.1
