--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "react-router-dom": "^5.1.2",
     "react-router-global-history": "^1.0.2",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=firefox-dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
